--- a/index.html
+++ b/index.html
@@ -1,221 +1,177 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LOVEZIN</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LOVEZIN</title>
 
-<style>
-*{box-sizing:border-box;}
+  <style>
+    *{box-sizing:border-box;}
 
-body{
-  margin:0;
-  font-family:Arial, Helvetica, sans-serif;
-  background:linear-gradient(180deg,#0f0f0f,#000);
-  color:white;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-}
+    body{
+      margin:0;
+      font-family:Arial, Helvetica, sans-serif;
+      background:linear-gradient(180deg,#0f0f0f,#000);
+      color:white;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      min-height:100vh;
+    }
 
-/* ===== ANIMAÇÃO ===== */
-@keyframes fadeInUp{
-  0%{opacity:0; transform:translateY(40px);}
-  100%{opacity:1; transform:translateY(0);}
-}
+    /* ===== HOME ===== */
+    .home{
+      width:95%;
+      max-width:500px;
+      background:#111;
+      padding:35px 25px;
+      border-radius:20px;
+      text-align:center;
+      box-shadow:0 0 40px rgba(0,0,0,0.7);
+    }
 
-@keyframes pulseTitle{
-  0%{transform:scale(1);}
-  50%{transform:scale(1.05);}
-  100%{transform:scale(1);}
-}
+    .logo{
+      font-size:40px;
+      font-weight:bold;
+      color:#ff0000;
+      margin-bottom:15px;
+    }
 
-/* ===== HOME ESTILO NOVO ===== */
-.home{
-  width:95%;
-  max-width:500px;
-  background:#111;
-  padding:35px 25px;
-  border-radius:20px;
-  text-align:center;
-  box-shadow:0 0 40px rgba(0,0,0,0.7);
-  animation:fadeInUp 1s ease;
-}
+    .sub{
+      color:#00ff88;
+      font-size:20px;
+      margin-bottom:20px;
+      font-weight:bold;
+    }
 
-.logo{
-  font-size:40px;
-  font-weight:bold;
-  color:#ff0000;
-  margin-bottom:15px;
-  animation:pulseTitle 2s infinite;
-}
+    .home p{
+      font-size:15px;
+      color:#ccc;
+      line-height:1.6;
+      margin-bottom:25px;
+    }
 
-.sub{
-  color:#00ff88;
-  font-size:20px;
-  margin-bottom:20px;
-  font-weight:bold;
-}
+    .btn{
+      width:100%;
+      padding:16px;
+      background:#ff0000;
+      color:white;
+      border:none;
+      border-radius:15px;
+      font-size:16px;
+      cursor:pointer;
+      margin-bottom:20px;
+      transition:0.3s;
+    }
 
-.home p{
-  font-size:15px;
-  color:#ccc;
-  line-height:1.6;
-  margin-bottom:25px;
-}
+    .btn:hover{
+      background:#cc0000;
+      transform:scale(1.03);
+    }
 
-.btn{
-  width:100%;
-  padding:16px;
-  background:#ff0000;
-  color:white;
-  border:none;
-  border-radius:15px;
-  font-size:16px;
-  cursor:pointer;
-  margin-bottom:20px;
-  transition:0.3s;
-}
+    /* ===== LOGIN E SALA ===== */
+    .hidden{display:none;}
 
-.btn:hover{
-  background:#cc0000;
-  transform:scale(1.03);
-}
+    .login, .card{
+      width:95%;
+      max-width:600px;
+      background:#181818;
+      padding:25px;
+      border-radius:16px;
+      text-align:center;
+      box-shadow:0 0 25px rgba(0,0,0,0.6);
+    }
 
-.global-online{
-  color:#00ff88;
-  font-size:15px;
-  margin-top:10px;
-}
+    input{
+      width:100%;
+      padding:14px;
+      border:none;
+      border-radius:10px;
+      background:#2a2a2a;
+      color:white;
+      font-size:14px;
+      margin-bottom:12px;
+    }
 
-.creator{
-  margin-top:25px;
-  font-size:12px;
-  color:#888;
-}
+    .btn-secondary{
+      background:#333;
+    }
 
-.creator a{
-  color:#ff0000;
-  text-decoration:none;
-}
+    .video-box{
+      width:100%;
+      background:#d9d9d9;
+      border-radius:12px;
+      overflow:hidden;
+      position:relative;
+      margin-bottom:20px;
+    }
 
-/* ===== LOGIN E SALA ===== */
-.hidden{display:none;}
+    .video-wrapper{
+      position:relative;
+      width:100%;
+      padding-top:56.25%;
+    }
 
-.login, .card{
-  width:95%;
-  max-width:600px;
-  background:#181818;
-  padding:25px;
-  border-radius:16px;
-  text-align:center;
-  box-shadow:0 0 25px rgba(0,0,0,0.6);
-}
+    .video-wrapper iframe,
+    .video-wrapper video{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      border:none;
+      object-fit:cover;
+    }
 
-input{
-  width:100%;
-  padding:14px;
-  border:none;
-  border-radius:10px;
-  background:#2a2a2a;
-  color:white;
-  font-size:14px;
-  margin-bottom:12px;
-}
+    .chat{
+      background:#111;
+      border-radius:12px;
+      padding:15px;
+      max-height:280px;
+      display:flex;
+      flex-direction:column;
+      margin-bottom:15px;
+    }
 
-.btn-secondary{
-  background:#333;
-}
+    #chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
 
-.video-box{
-  width:100%;
-  background:#d9d9d9;
-  border-radius:12px;
-  overflow:hidden;
-  position:relative;
-  margin-bottom:20px;
-}
+    .msg{
+      background:#222;
+      padding:8px 12px;
+      border-radius:8px;
+      margin-bottom:8px;
+      font-size:13px;
+      word-break:break-word;
+    }
 
-.video-wrapper{
-  position:relative;
-  width:100%;
-  padding-top:56.25%;
-}
+    .msg strong{color:#e50914;}
 
-.video-wrapper iframe,
-.video-wrapper video{
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  border:none;
-  object-fit:cover;
-}
+    .btn-sair{
+      width:100%;
+      padding:12px;
+      background:#444;
+      color:white;
+      border:none;
+      border-radius:10px;
+      font-size:14px;
+      cursor:pointer;
+    }
 
-.chat{
-  background:#111;
-  border-radius:12px;
-  padding:15px;
-  max-height:280px;
-  display:flex;
-  flex-direction:column;
-  margin-bottom:15px;
-}
-
-#chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
-
-.msg{
-  background:#222;
-  padding:8px 12px;
-  border-radius:8px;
-  margin-bottom:8px;
-  font-size:13px;
-  word-break:break-word;
-}
-
-.msg strong{color:#e50914;}
-
-.btn-sair{
-  width:100%;
-  padding:12px;
-  background:#444;
-  color:white;
-  border:none;
-  border-radius:10px;
-  font-size:14px;
-  cursor:pointer;
-}
-
-</style>
+    .hidden{display:none;}
+  </style>
 </head>
 <body>
 
 <!-- HOME -->
 <div class="home" id="homeBox">
-
   <div class="logo">LOVEZIN</div>
-
   <div class="sub">Como funciona?</div>
-
   <p>
     🎬 Entre em um mundo de vídeos privados juntos!💞<br><br>
     🔐 Crie ou entre em uma sala usando uma senha.<br>
     Só quem souber entra!
   </p>
-
   <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
-
-  <div class="global-online" id="totalOnlineGlobal">
-    Usuários no site: 0
-  </div>
-
-  <div class="creator">
-    Criador: <strong>Isac Santos</strong><br>
-    Instagram: <a href="https://instagram.com/lovezin.vuh" target="_blank">@lovezin.vuh</a>
-  </div>
-
 </div>
 
 <!-- LOGIN -->
@@ -246,12 +202,10 @@ input{
     <button class="btn" id="btnEnviarMsg">Enviar</button>
   </div>
 
-  <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
+  <button class="btn" id="btnMinimizarChat">Minimizar Chat</button>
+  <button class="btn hidden" id="btnAbrirChat">Abrir Chat</button>
 
-  <div class="creator">
-    Criador: <strong>Isac Santos</strong> |
-    Instagram: <a href="https://instagram.com/nini.vuhh" target="_blank">@nini.vuhh</a>
-  </div>
+  <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
 </div>
 
 <audio id="notifSound">
@@ -259,167 +213,184 @@ input{
 </audio>
 
 <script type="module">
-// Importação do Firebase com a nova configuração do PrivéFlix
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, arrayUnion, arrayRemove, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getFirestore, doc, setDoc, getDoc, onSnapshot, updateDoc, arrayUnion, arrayRemove, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-// Nova configuração do Firebase para PrivéFlix
-const firebaseConfig = {
-  apiKey: "AIzaSyAvGr4AMVDLtTu0OVy9wZB2t5Qt3DTBDQ8",
-  authDomain: "priveflix.firebaseapp.com",
-  projectId: "priveflix",
-  storageBucket: "priveflix.firebasestorage.app",
-  messagingSenderId: "92242980044",
-  appId: "1:92242980044:web:4340e03b197b842c252669",
-  measurementId: "G-W1C74TT6W2"
-};
+  const firebaseConfig = {
+    apiKey: "AIzaSyAvGr4AMVDLtTu0OVy9wZB2t5Qt3DTBDQ8",
+    authDomain: "priveflix.firebaseapp.com",
+    projectId: "priveflix",
+    storageBucket: "priveflix.firebasestorage.app",
+    messagingSenderId: "92242980044",
+    appId: "1:92242980044:web:4340e03b197b842c252669",
+    measurementId: "G-W1C74TT6W2"
+  };
 
-// Inicializar Firebase
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-let salaRef = null;
-let nomeLocal = "";
-let donoSala = "";
-let ultimoVideo = "";
-let ultimoChat = 0;
+  let salaRef = null;
+  let nomeLocal = "";
+  let donoSala = "";
+  let ultimoVideo = "";
+  let ultimoChat = 0;
 
-window.abrirLogin = () => {homeBox.classList.add("hidden"); loginBox.classList.remove("hidden");}
-window.voltarHome = () => {loginBox.classList.add("hidden"); homeBox.classList.remove("hidden");}
+  window.abrirLogin = () => { homeBox.classList.add("hidden"); loginBox.classList.remove("hidden"); }
+  window.voltarHome = () => { loginBox.classList.add("hidden"); homeBox.classList.remove("hidden"); }
 
-const globalRef = doc(db, "site", "online");
+  const globalRef = doc(db, "site", "online");
 
-async function entrarSite(){
-  let snap = await getDoc(globalRef);
-  if(!snap.exists()) await setDoc(globalRef, {total: 0});
-  await updateDoc(globalRef, {total: increment(1)});
-}
-async function sairSite(){ await updateDoc(globalRef, {total: increment(-1)}); }
-entrarSite();
-
-onSnapshot(globalRef, (snap) => {
-  let d = snap.data();
-  if(d){
-    totalOnlineGlobal.innerText = "Usuários no site: " + d.total;
-    if(globalSala) globalSala.innerText = "Usuários no site: " + d.total;
-  }
-});
-
-btnEntrar.onclick = async () => {
-  let senha = senhaSala.value.trim();
-  let nome = nomeUsuario.value.trim();
-  if(!senha || !nome){ alert("Preencha tudo"); return; }
-
-  nomeLocal = nome;
-  salaRef = doc(db, "salas", senha);
-
-  let snap = await getDoc(salaRef);
-  if(!snap.exists()){
-    await setDoc(salaRef, {video: "", chat: [], online: [], dono: nomeLocal});
-    donoSala = nomeLocal;
-  }else{
-    donoSala = snap.data().dono;
+  async function entrarSite(){
+    let snap = await getDoc(globalRef);
+    if(!snap.exists()) await setDoc(globalRef, {total: 0});
+    await updateDoc(globalRef, {total: increment(1)});
   }
 
-  await updateDoc(salaRef, {
-    online: arrayUnion(nomeLocal),
-    chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " entrou na sala"})
+  async function sairSite(){ await updateDoc(globalRef, {total: increment(-1)}); }
+  entrarSite();
+
+  onSnapshot(globalRef, (snap) => {
+    let d = snap.data();
+    if(d){
+      totalOnlineGlobal.innerText = "Usuários no site: " + d.total;
+    }
   });
 
-  loginBox.classList.add("hidden");
-  salaBox.classList.remove("hidden");
+  btnEntrar.onclick = async () => {
+    let senha = senhaSala.value.trim();
+    let nome = nomeUsuario.value.trim();
+    if(!senha || !nome){ alert("Preencha tudo"); return; }
 
-  onSnapshot(salaRef, (docSnap) => {
-    let dados = docSnap.data();
-    if(!dados) return;
+    nomeLocal = nome;
+    salaRef = doc(db, "salas", senha);
 
-    donoSala = dados.dono;
-
-    onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
-
-    if(nomeLocal !== donoSala){
-      btnEnviarVideo.disabled = true;
+    let snap = await getDoc(salaRef);
+    if(!snap.exists()){
+      await setDoc(salaRef, {video: "", chat: [], online: [], dono: nomeLocal});
+      donoSala = nomeLocal;
     } else {
-      btnEnviarVideo.disabled = false;
+      donoSala = snap.data().dono;
     }
 
-    if(dados.chat && dados.chat.length !== ultimoChat){
-      ultimoChat = dados.chat.length;
-      mostrarChat(dados.chat);
-    }
+    await updateDoc(salaRef, {
+      online: arrayUnion(nomeLocal),
+      chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " entrou na sala"})
+    });
 
-    if(dados.video && dados.video !== ultimoVideo){
-      ultimoVideo = dados.video;
-      carregarVideo(dados.video);
-    }
-  });
-};
+    loginBox.classList.add("hidden");
+    salaBox.classList.remove("hidden");
 
-btnEnviarMsg.onclick = async () => {
-  let texto = chatInput.value.trim();
-  if(!texto) return;
-  await updateDoc(salaRef, {chat: arrayUnion({nome: nomeLocal, msg: texto})});
-  chatInput.value = "";
-};
+    onSnapshot(salaRef, (docSnap) => {
+      let dados = docSnap.data();
+      if(!dados) return;
 
-btnEnviarVideo.onclick = async () => {
-  if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
-  let link = linkInput.value.trim();
-  if(!link) return;
-  await updateDoc(salaRef, {video: link});
-  linkInput.value = "";
-};
+      donoSala = dados.dono;
 
-async function sairSala(){
-  if(!salaRef){ location.reload(); return; }
+      onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
 
-  let snap = await getDoc(salaRef);
-  let dados = snap.data();
+      if(nomeLocal !== donoSala){
+        btnEnviarVideo.disabled = true;
+      } else {
+        btnEnviarVideo.disabled = false;
+      }
 
-  await updateDoc(salaRef, {
-    online: arrayRemove(nomeLocal),
-    chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " saiu da sala"})
-  });
+      if(dados.chat && dados.chat.length !== ultimoChat){
+        ultimoChat = dados.chat.length;
+        mostrarChat(dados.chat);
+      }
 
-  await sairSite();
-  location.reload();
-}
+      if(dados.video && dados.video !== ultimoVideo){
+        ultimoVideo = dados.video;
+        carregarVideo(dados.video);
+      }
+    });
+  };
 
-function mostrarChat(lista){
-  chatBox.innerHTML = "";
-  lista.forEach(item => {
-    let div = document.createElement("div");
-    div.className = "msg";
-    let nomeExibido = item.nome === donoSala ? "👑 " + item.nome : item.nome;
-    div.innerHTML = "<strong>" + nomeExibido + ":</strong> " + item.msg;
-    chatBox.appendChild(div);
-  });
-  chatBox.scrollTop = chatBox.scrollHeight;
-  notifSound.currentTime = 0;
-  notifSound.play();
-}
+  btnEnviarMsg.onclick = async () => {
+    let texto = chatInput.value.trim();
+    if(!texto) return;
+    await updateDoc(salaRef, {chat: arrayUnion({nome: nomeLocal, msg: texto})});
+    chatInput.value = "";
+  };
 
-function carregarVideo(link){
-  videoArea.innerHTML = "";
-  if(link.includes("youtu")){
-    let id = "";
-    if(link.includes("watch?v=")){
-      id = link.split("watch?v=")[1].split("&")[0];
-    }else{
-      id = link.split("youtu.be/")[1].split("?")[0];
-    }
-    let iframe = document.createElement("iframe");
-    iframe.src = "https://www.youtube.com/embed/" + id;
-    iframe.allowFullscreen = true;
-    videoArea.appendChild(iframe);
-  } else {
-    let video = document.createElement("video");
-    video.src = link;
-    video.controls = true;
-    video.autoplay = true;
-    videoArea.appendChild(video);
+  btnEnviarVideo.onclick = async () => {
+    if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
+    let link = linkInput.value.trim();
+    if(!link) return;
+    await updateDoc(salaRef, {video: link});
+    linkInput.value = "";
+  };
+
+  async function sairSala(){
+    if(!salaRef){ location.reload(); return; }
+
+    let snap = await getDoc(salaRef);
+    let dados = snap.data();
+
+    await updateDoc(salaRef, {
+      online: arrayRemove(nomeLocal),
+      chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " saiu da sala"})
+    });
+
+    await sairSite();
+    location.reload();
   }
-}
+
+  function mostrarChat(lista){
+    chatBox.innerHTML = "";
+    lista.forEach(item => {
+      let div = document.createElement("div");
+      div.className = "msg";
+      let nomeExibido = item.nome === donoSala ? "👑 " + item.nome : item.nome;
+      div.innerHTML = "<strong>" + nomeExibido + ":</strong> " + item.msg;
+      chatBox.appendChild(div);
+    });
+    chatBox.scrollTop = chatBox.scrollHeight;
+    notifSound.currentTime = 0;
+    notifSound.play();
+  }
+
+  function carregarVideo(link){
+    videoArea.innerHTML = "";
+    if(link.includes("youtu")){
+      let id = "";
+      if(link.includes("watch?v=")){
+        id = link.split("watch?v=")[1].split("&")[0];
+      } else {
+        id = link.split("youtu.be/")[1].split("?")[0];
+      }
+      let iframe = document.createElement("iframe");
+      iframe.src = "https://www.youtube.com/embed/" + id;
+      iframe.allowFullscreen = true;
+      videoArea.appendChild(iframe);
+    } else {
+      let video = document.createElement("video");
+      video.src = link;
+      video.controls = true;
+      video.autoplay = true;
+      videoArea.appendChild(video);
+    }
+  }
+
+  // Chat minimize and open logic
+  const btnMinimizarChat = document.getElementById("btnMinimizarChat");
+  const btnAbrirChat = document.getElementById("btnAbrirChat");
+
+  btnMinimizarChat.onclick = () => {
+    chatBox.style.display = "none";
+    chatInput.style.display = "none";
+    btnEnviarMsg.style.display = "none";
+    btnMinimizarChat.style.display = "none";
+    btnAbrirChat.style.display = "block";
+  };
+
+  btnAbrirChat.onclick = () => {
+    chatBox.style.display = "block";
+    chatInput.style.display = "block";
+    btnEnviarMsg.style.display = "block";
+    btnMinimizarChat.style.display = "block";
+    btnAbrirChat.style.display = "none";
+  };
 </script>
 
 </body>
