--- a/index.html
+++ b/index.html
@@ -19,19 +19,6 @@
       min-height:100vh;
     }
 
-    /* ===== ANIMAÇÃO ===== */
-    @keyframes fadeInUp{
-      0%{opacity:0; transform:translateY(40px);}
-      100%{opacity:1; transform:translateY(0);}
-    }
-
-    @keyframes pulseTitle{
-      0%{transform:scale(1);}
-      50%{transform:scale(1.05);}
-      100%{transform:scale(1);}
-    }
-
-    /* ===== HOME ESTILO COM ANIMAÇÃO ===== */
     .home{
       width:95%;
       max-width:500px;
@@ -40,7 +27,6 @@
       border-radius:20px;
       text-align:center;
       box-shadow:0 0 40px rgba(0,0,0,0.7);
-      animation:fadeInUp 1s ease;
     }
 
     .logo{
@@ -48,7 +34,6 @@
       font-weight:bold;
       color:#ff0000;
       margin-bottom:15px;
-      animation:pulseTitle 2s infinite;
     }
 
     .sub{
@@ -56,13 +41,6 @@
       font-size:20px;
       margin-bottom:20px;
       font-weight:bold;
-    }
-
-    .home p{
-      font-size:15px;
-      color:#ccc;
-      line-height:1.6;
-      margin-bottom:25px;
     }
 
     .btn{
@@ -89,15 +67,41 @@
       margin-top:10px;
     }
 
-    .creator{
-      margin-top:25px;
-      font-size:12px;
-      color:#888;
+    .video-box{
+      width:100%;
+      background:#d9d9d9;
+      border-radius:12px;
+      overflow:hidden;
+      position:relative;
+      margin-bottom:20px;
     }
 
-    .creator a{
-      color:#ff0000;
-      text-decoration:none;
+    .video-wrapper{
+      position:relative;
+      width:100%;
+      padding-top:56.25%;
+    }
+
+    .video-wrapper iframe,
+    .video-wrapper video{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      border:none;
+      object-fit:cover;
+    }
+
+    /* Estilo para os botões lado a lado */
+    .botao-container {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+    }
+
+    .botao-container .btn {
+      width: 48%; /* Torna os botões menores e com espaço entre eles */
     }
 
     /* ===== LOGIN E SALA ===== */
@@ -126,32 +130,6 @@
 
     .btn-secondary{
       background:#333;
-    }
-
-    .video-box{
-      width:100%;
-      background:#d9d9d9;
-      border-radius:12px;
-      overflow:hidden;
-      position:relative;
-      margin-bottom:20px;
-    }
-
-    .video-wrapper{
-      position:relative;
-      width:100%;
-      padding-top:56.25%;
-    }
-
-    .video-wrapper iframe,
-    .video-wrapper video{
-      position:absolute;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-      border:none;
-      object-fit:cover;
     }
 
     .chat{
@@ -230,10 +208,6 @@
   <div class="global-online" id="totalOnlineGlobal">
     Usuários no site: 0
   </div>
-  <div class="creator">
-    Criador: <strong>Isac Santos</strong><br>
-    Instagram: <a href="https://instagram.com/lovezin.vuh" target="_blank">@lovezin.vuh</a>
-  </div>
 </div>
 
 <!-- LOGIN -->
@@ -256,7 +230,11 @@
   </div>
 
   <input type="text" id="linkInput" placeholder="Link YouTube, TikTok, Instagram, Stories ou .mp4">
-  <button class="btn" id="btnEnviarVideo" onclick="carregarVideo(linkInput.value)">Enviar Vídeo</button>
+  <div class="botao-container">
+    <button class="btn" id="btnEnviarVideo" onclick="carregarVideo(linkInput.value)">Enviar Vídeo</button>
+    <button class="btn" id="btnMinimizarChat">Minimizar Chat</button>
+    <button class="btn hidden" id="btnAbrirChat">Abrir Chat</button>
+  </div>
 
   <div class="video-box">
     <div class="video-wrapper" id="videoArea"></div>
@@ -268,9 +246,6 @@
     <input type="text" id="chatInput" placeholder="Mensagem">
     <button class="btn" id="btnEnviarMsg">Enviar</button>
   </div>
-
-  <button class="btn" id="btnMinimizarChat">Minimizar Chat</button>
-  <button class="btn hidden" id="btnAbrirChat">Abrir Chat</button>
 
   <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
 </div>
@@ -426,65 +401,27 @@
 
   function carregarVideo(link){
     videoArea.innerHTML = "";
-
-    // Carregar vídeos do YouTube
     if(link.includes("youtu")){
-        let id = "";
-        if(link.includes("watch?v=")){
-            id = link.split("watch?v=")[1].split("&")[0];
-        } else {
-            id = link.split("youtu.be/")[1].split("?")[0];
-        }
-        let iframe = document.createElement("iframe");
-        iframe.src = "https://www.youtube.com/embed/" + id;
-        iframe.allowFullscreen = true;
-        videoArea.appendChild(iframe);
-
-    // Carregar vídeos do TikTok
-    } else if(link.includes("tiktok.com")){
-        let id = link.split("/")[5];
-        let iframe = document.createElement("iframe");
-        iframe.src = `https://www.tiktok.com/embed/${id}`;
-        iframe.width = "100%";
-        iframe.height = "500px";
-        iframe.allowFullscreen = true;
-        videoArea.appendChild(iframe);
-
-    // Carregar vídeos do Instagram Reels
-    } else if(link.includes("instagram.com/reel/")){
-        let id = link.split("/reel/")[1]?.split("/")[0]; // Para pegar o ID do Reel
-        if (id) {
-            let iframe = document.createElement("iframe");
-            iframe.src = `https://www.instagram.com/reel/${id}/embed`;
-            iframe.width = "100%";
-            iframe.height = "500px";
-            iframe.frameBorder = "0";
-            iframe.allowFullscreen = true;
-            videoArea.appendChild(iframe);
-        } else {
-            alert("Link do Instagram Reels inválido.");
-        }
-
-    // Carregar vídeos do Instagram Stories
-    } else if(link.includes("instagram.com/stories/")){
-        let id = link.split("/stories/")[1]?.split("/")[0]; // Para pegar o ID da História
-        if (id) {
-            window.open(link, '_blank');  // Abre a história no Instagram
-        } else {
-            alert("Link do Instagram Stories inválido.");
-        }
-
-    // Carregar vídeos de outras fontes, como arquivos mp4
+      let id = "";
+      if(link.includes("watch?v=")){
+        id = link.split("watch?v=")[1].split("&")[0];
+      } else {
+        id = link.split("youtu.be/")[1].split("?")[0];
+      }
+      let iframe = document.createElement("iframe");
+      iframe.src = "https://www.youtube.com/embed/" + id;
+      iframe.allowFullscreen = true;
+      videoArea.appendChild(iframe);
     } else {
-        let video = document.createElement("video");
-        video.src = link;
-        video.controls = true;
-        video.autoplay = true;
-        videoArea.appendChild(video);
+      let video = document.createElement("video");
+      video.src = link;
+      video.controls = true;
+      video.autoplay = true;
+      videoArea.appendChild(video);
     }
   }
 
-  // Chat minimize and open logic
+  // Função de minimizar o chat
   const btnMinimizarChat = document.getElementById("btnMinimizarChat");
   const btnAbrirChat = document.getElementById("btnAbrirChat");
 
